app right overflow y fixed

--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,11 @@
 }
 .app-right {
   width: 50%;
-  height: 100% !important;
-  max-height: 100% !important;
+  height: 80vh;
   padding: 40px;
   padding-left: 20px;
   overflow-y: scroll;
   scrollbar-width: none;
-  /* background-color: aqua; */
 }
 .app-right::-webkit-scrollbar {
   display: none;
@@ -59,6 +57,7 @@
     height: 100%;
     flex-direction: column;
     overflow-y: scroll;
+    border-radius: 0px;
   }
   .app-left {
     width: 100%;
